Compucom CCQA Org 100919/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCST_Account_Region_Vertical__c</fullName>
        <label>FCST Account Region / Vertical</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Admin Account</fullName>
                </value>
                <value>
                    <fullName>Alliances</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Financial Services Vertical</fullName>
                </value>
                <value>
                    <fullName>GE</fullName>
                </value>
                <value>
                    <fullName>Partner Account (Spans Multiple Regions)</fullName>
                </value>
                <value>
                    <fullName>Partner Account - No Direct Sales</fullName>
                </value>
                <value>
                    <fullName>Protected Account – TechZone</fullName>
                </value>
                <value>
                    <fullName>Retail Vertical</fullName>
                </value>
                <value>
                    <fullName>TBD / Needs Review</fullName>
                </value>
                <value>
                    <fullName>Unassigned / Not a Target</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>VAR Partner &quot;Protected&quot; Account – Clearpath</fullName>
                </value>
                <value>
                    <fullName>Wholesale</fullName>
                </value>
                <value>
                    <fullName>Supplier Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCST_Account_Sub_Region__c</fullName>
        <label>FCST Account Sub Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alliances</fullName>
                </value>
                <value>
                    <fullName>Canada East</fullName>
                </value>
                <value>
                    <fullName>Canada West</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>US - Central East</fullName>
                </value>
                <value>
                    <fullName>US - DC Region</fullName>
                </value>
                <value>
                    <fullName>US - North Central</fullName>
                </value>
                <value>
                    <fullName>US - North East</fullName>
                </value>
                <value>
                    <fullName>US - South Central</fullName>
                </value>
                <value>
                    <fullName>US - South East</fullName>
                </value>
                <value>
                    <fullName>US - Strategic Accounts</fullName>
                </value>
                <value>
                    <fullName>US - Western Region</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCST_CPM_Region__c</fullName>
        <label>FCST CPM_Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US-DC Area</fullName>
                </value>
                <value>
                    <fullName>US-Mid-Atlantic</fullName>
                </value>
                <value>
                    <fullName>US-Midwest</fullName>
                </value>
                <value>
                    <fullName>US-Ohio Valley</fullName>
                </value>
                <value>
                    <fullName>US-South Central</fullName>
                </value>
                <value>
                    <fullName>US-Southeast</fullName>
                </value>
                <value>
                    <fullName>US-West</fullName>
                </value>
                <value>
                    <fullName>US-Target</fullName>
                </value>
                <value>
                    <fullName>US-US Bank</fullName>
                </value>
                <value>
                    <fullName>CAN-Canada</fullName>
                </value>
                <value>
                    <fullName>CAN-BMO</fullName>
                </value>
                <value>
                    <fullName>CAN-Gov&apos;t of Ontario</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCST_GeoCodes__c</fullName>
        <label>FCST GeoCodes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FCST_Program_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FCST_Program Executive</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FCST_Program_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FCST Program Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>